examples/parser/loop.an
main () =
    a = 0
    b = 1
    loop a (b: I32) (c: I32 = 2) (d = 3) ->
        recur a b c d

// args: -e ast --no-color
// expected exit status: 1
// expected stdout:
// main () =
//     a = 0
//     b = 1


// expected stderr:
// examples/parser/loop.an:4:12
// 3 |     b = 1
//   |     // error: Expected `->` to separate the loop parameters from its body but found `(`
// 4 |     loop a (b: I32) (c: I32 = 2) (d = 3) ->
//   |            ^
// 5 |         recur a b c d
// 
// Found 1 error and 0 warnings

